FIX: styles for gap under post moved in inner div

--- a/src/styles/_posts.scss
+++ b/src/styles/_posts.scss
@@ -31,9 +31,15 @@
 
 .post {
 
+  &-details {
+
+    .posts & {
+      padding: 0 0 12px;
+      border-bottom: 1px solid rgba($gray, 0.2);
+    }
+  }
+
   .posts & {
-    padding: 0 0 12px;
-    border-bottom: 1px solid rgba($gray, 0.2);
     position: relative;
     z-index: 0;
 
